adding HTMLTojpg functionality

--- a/output/test.html
+++ b/output/test.html
@@ -1,6 +1,4 @@
-<head>
-<meta charset='UTF-8'>
-<title>test</title><link href='../stylesheet.css' rel='stylesheet'>
+<head><meta charset='UTF-8'><title>test</title><link href='../stylesheet.css' rel='stylesheet'>
 </head>
 <body>
 <h1>Dillinger</h1>
